% Check from R:
%  news(db = tools:::.build_news_db_from_package_NEWS_Rd("~/R/Pkgs/sfsmisc/inst/NEWS.Rd"))
\name{NEWS}
\title{News for \R Package \pkg{sfsmisc}}
\encoding{UTF-8}

%%% TODO:
      %% \item New \code{rDatetime()} for random date/time sequences
      %% within a specified time range.

\section{CHANGES in sfsmisc VERSION 1.1-3 [2018-..-..]}{
  \subsection{Tweaks}{
    \itemize{
      \item \file{DESCRIPTION} update, contains ORCID.
      \item \file{README.md} links to blog post on (17 yr old -> GH)
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item \code{read.org.table()} thinko (\code{grep()}).
    }
  }
}

\section{CHANGES in sfsmisc VERSION 1.1-2 [2018-03-05]}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item new \code{funEnv()} utility: \code{list()}-like construction
      of a set of functions (and more) which all share the same
      environment.

      \item Using \code{Authors@R} in \file{DESCRIPTION} and so finally
      honor the many contributors by listing them.

      \item Requiring R >= 3.2.0, so we can use \code{\\CRANpkg{.}} in
      help files.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item \code{histBxp()} no longer evokes a warning from \code{hist.default()}.

      \item \code{digitsBase(0)} now works.
    }
  }
}

\section{CHANGES in sfsmisc VERSION 1.1-1 [2017-06-08]}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{sessionInfoX()} now also reports \code{capabilities()}
      (and more, depending on \R's version).

      \item \code{mult.fig()}'s default for \code{mgp} now adapts to a
      non-default value of \code{par("las")}.

      \item \code{eaxis()} gets new options \code{axp} and \code{n.axp}
      for more flexible automatic tick marks.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item \code{integrate.xy()} is more careful in matching "data"
      with grid points, thanks to a bug report by Loraine Liping Seng.
    }
  }
}
